sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:17: error: not found: value echanges
  }while((ecart>1)||(!echanges))
                      ^