sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs()
  do{
    var echanges = true
    if(ecart>1){
      ecart = (ecart.asInstanceOf[Double]/1.3).asInstanceOf[Int]
    }
    var i=0
    while(i + ecart< getNombreValeurs()){
      if(!plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        echanges = false
      }
      i = i+1
    }
  }while((ecart>1)||(!echanges))
}